# rustique

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  changelog.md  flake.nix  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: build-ci.yml  release-ci.yml  rustique-workflow.yml
crates/lithic-core/: Cargo.toml
crates/lithic-core/src/: aliases.rs  api.rs  consts.rs  errors.rs  information_utils.rs  instance.rs  lib.rs  options.rs  search.rs  symlink_manager.rs  utils.rs
crates/lithic-core/src/api/: client.rs  download.rs  structs.rs
crates/lithic-core/src/config/: config.toml  flatten_map.rs  manager.rs  structs.rs
crates/lithic-core/src/installer/: manager.rs
crates/lithic-core/src/localization/: en_help.toml
crates/lithic-core/src/sync/: structs.rs
crates/lithic-core/src/traits/: option_ext.rs  search.rs  string_ext.rs  vec_ext.rs
crates/lithic-core/src/utils/: mod.rs
crates/lithic-core/src/version/: filter.rs  manager.rs
crates/lithic-locale/: Cargo.toml
crates/lithic-locale/locales/en/: errors.ftl  gui.ftl  help.ftl
crates/lithic-locale/src/: lib.rs
crates/rustique-core/: Cargo.toml
crates/rustique-core/src/: aliases.rs  config.rs  information_utils.rs  install_manager.rs  lib.rs  options.rs  rustique_errors.rs  rustique_options.rs  search.rs  symlink_manager.rs  sync_structs.rs  traits.rs  utils.rs  version_filter.rs  version_management.rs
crates/rustique-core/src/api/: api_structs.rs  client.rs  download.rs  structs.rs
crates/rustique-core/src/config/: config.toml  config_manager.rs  config_structs.rs  flatten_map.rs  manager.rs
crates/rustique-core/src/installer/: manager.rs
crates/rustique-core/src/localization/: en_help.toml
docs/: README.md
nix/: package.nix  shell.nix
rustique-cli/: Cargo.toml
rustique-cli/src/: cli_commands.rs  logging.rs  main.rs  windows_funcs.rs
rustique-cli/src/commands/: arg_structs.rs  config.rs  config_table.rs  delete.rs  download.rs  info.rs  install.rs  list.rs  search.rs  sync.rs  update.rs
rustique-cli/src/modpack/: modpack_commands.rs  mp_create.rs  mp_delete.rs  mp_disable.rs  mp_enable.rs  mp_install.rs  mp_update.rs
rustique-cli/src/updater/: github_api_args.rs  self_update.rs  update_manager.rs
rustique-core/: Cargo.toml
rustique-core/src/: install_manager.rs  rustique_errors.rs  rustique_options.rs  search.rs  sync_structs.rs  utils.rs  version_management.rs
rustique-core/src/api/: api_structs.rs  client.rs  download.rs
rustique-core/src/config/: config_manager.rs  flatten_map.rs
rustique-core/src/localization/: en_help.toml  localizer.rs
rustique-core/src/traits/: search_traits.rs  vec_ext.rs
rustique-gui/: Cargo.toml
rustique-gui/src/: app.rs  ops.rs  widgets.rs
rustique-gui/src/views/: browse.rs  installed.rs  mod.rs  settings.rs
src/: aliases.rs  api.rs  api_structs.rs  bulk_downloader.rs  changelog.md  cli_commands.rs  commands.rs  config.rs  config.toml  config_manager.rs  config_structs.rs  dependencies.rs  flatten_map.rs  information_utils.rs  install.rs  install_manager.rs  list.rs  logging.rs  main.rs  modpack.rs  modpack_commands.rs  rustique_errors.rs  rustique_options.rs  sync.rs  traits.rs  update.rs  utils.rs  version_management.rs
src/api/: api_structs.rs  client.rs  download.rs
src/commands/: arg_structs.rs  bulk_downloader.rs  config.rs  config_table.rs  delete.rs  download.rs  info.rs  install.rs  list.rs  search.rs  sync.rs  update.rs
src/commands/arg_structs/: config_args.rs  config_table_args.rs  download_args.rs  info_args.rs  install_args.rs  list_args.rs  modpack_args.rs  search_args.rs  sync_args.rs
src/config/: config.rs  config_manager.rs  config_structs.rs  config_table.rs  flatten_map.rs
src/modpack/: modpack_commands.rs  modpack_toml.rs  mp_create.rs  mp_delete.rs  mp_disable.rs  mp_enable.rs  mp_install.rs  mp_list.rs  mp_update.rs  symlink_manager.rs
src/traits/: option_ext.rs  ref_ext.rs  search_traits.rs  string_ext.rs  vec_ext.rs
src/updater/: self_update.rs  update_manager.rs
(+16 files in other folders)
