[workspace]
members  = [ "packages/*", "crates/*" ]
resolver = "3"

[workspace.package]
version      = "0.6.0"
edition      = "2024"
rust-version = "1.95.0"
license      = "MPL-2.0"
readme       = "./docs/README.md"
description  = "A mod manager for Vintage Story"
homepage     = "https://github.com/NotAShelf/rustique"
repository   = "https://github.com/NotAShelf/rustique"

[workspace.dependencies]
lithic-cli    = { path = "packages/lithic-cli", version = "0.6.0" }
lithic-core   = { path = "crates/lithic-core", version = "0.6.0" }
lithic-gui    = { path = "packages/lithic-gui", version = "0.6.0" }
lithic-locale = { path = "crates/lithic-locale", version = "0.6.0" }

fluent        = "0.17.0"
fluent-syntax = "0.12.0"
unic-langid   = { version = "0.9.5", features = [ "macros" ] }

async_zip          = { version = "0.0.18", features = [ "tokio", "tokio-fs", "deflate" ] }
chrono             = { version = "0.4.42" }
clap               = { version = "4.5.48", features = [ "color", "suggestions", "derive" ] }
clap_complete      = "4.5.58"
color-eyre         = "0.6.5"
comfy-table        = "7.2.1"
csv                = "1.3.1"
dirs               = { version = "6.0.0" }
futures            = "0.3.31"
html2text          = "0.17.1"
human_format       = "1.2.1"
indexmap           = { version = "2.11.4", features = [ "serde" ] }
indicatif          = { version = "0.18.0", features = [ "tokio" ] }
is_elevated        = "0.1.2"
lenient_semver     = "0.4.2"
num_cpus           = "1.17.0"
reqwest            = { version = "0.13.2", features = [ "json", "default-tls" ], default-features = false }
semver             = "1.0.27"
serde              = { version = "1.0.228", features = [ "derive" ] }
serde_json         = "1.0.145"
serde_json5        = { version = "0.2.1" }
thiserror          = "2.0.18"
tokio              = { version = "1.47.1", features = [ "fs", "rt-multi-thread", "macros", "io-util" ] }
toml               = { version = "1.1.2", features = [ "preserve_order" ] }
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [ "env-filter" ] }
url                = "2.5.7"
uuid               = { version = "1.18.1", features = [ "v4" ] }
yansi              = "1.0.1"

iced              = { version = "0.14.0", features = [ "tokio" ] }
native-theme      = "0.5.7"
native-theme-iced = "0.5.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
opt-level     = 3

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = "symbols"
