[package]
name    = "lithic-core"
version = "0.5.16"
edition = "2024"

[lib]
name = "lithic_core"

[dependencies]
async_zip      = { workspace = true }
chrono         = { workspace = true }
clap           = { workspace = true }
comfy-table    = { workspace = true }
dirs           = { workspace = true }
futures        = { workspace = true }
html2text      = { workspace = true }
indexmap       = { workspace = true }
indicatif      = { workspace = true }
lenient_semver = { workspace = true }
num_cpus       = { workspace = true }
reqwest        = { workspace = true }
semver         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_json5    = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }
yansi          = { workspace = true }
